# golisoda

./: .gitignore  Procfile  README.md  docker-compose.yml  golisoda_data.dump  package-lock.json
backend/: .env.example  alembic.ini  pyproject.toml  railpack.json  railway.toml  requirements.txt  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_foundation_schema.py  0002_survey_foundation.py  0003_channel_foundation.py  0004_feedback_submission_pipeline.py  0005_granular_rbac.py  0006_qtype_rating.py  0007_survey_templates.py  0008_csat_scale_question_types.py  0009_reset_feedback_data.py  0010_kiosk_navigation.py  0011_text_phone_email_question_types.py  0012_default_templates_csat_emoji.py  0013_repair_legacy_question_types.py  0014_heritage_immersive_template.py  0015_heritage_template_presentation_cream_theme.py  0016_heritage_luxury_template.py  0017_theme_tokens.py  0018_tenant_organization_address.py  0019_platform_super_admin.py  0020_phone_portrait_survey_template.py  0021_heritage_immersive_stepper_layout.py  (+4 more)
backend/app/: __init__.py  main.py  main_platform_admin.py  main_public_feedback.py  main_template_admin.py  main_tenant_admin.py
backend/app/api/: audit_logs.py  (+18 more)
backend/tests/: test_answer_validation.py  test_auth_core.py  test_authorization.py  test_channels.py  test_feedback_submission.py  test_health.py  test_pii_encryption.py  test_public_effective_theme.py  test_response_reports.py  test_role_rules.py  test_schema_metadata.py  test_service_apps_mount.py  test_survey_presentation.py  test_survey_schemas.py  test_survey_theme.py
(+180 files in other folders)
